--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@apollo/react-hooks": "^4.0.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -14,14 +15,20 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "final-form": "^4.20.1",
     "graphql": "^15.4.0",
+    "mobx": "^6.0.4",
+    "mobx-cookie": "^3.0.4",
     "mobx-react": "^7.0.5",
     "node-sass": "4.14.1",
     "peerjs": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-final-form-hooks": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.3",
     "use-query-params": "^1.1.9",
     "web-vitals": "^0.2.4"
