--- a/package.json
+++ b/package.json
@@ -5,38 +5,47 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.1.4",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.167",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "customize-cra": "^1.0.0",
     "final-form": "^4.20.1",
     "graphql": "^15.4.0",
-    "mobx": "^6.0.4",
-    "mobx-cookie": "^3.0.4",
-    "mobx-react": "^7.0.5",
+    "graphql-tag": "^2.11.0",
+    "js-sha512": "^0.8.0",
+    "lodash": "^4.17.20",
+    "mobx": "^4.15.4",
+    "mobx-react": "^6.2.2",
+    "mobx-react-lite": "^2.0.7",
     "node-sass": "4.14.1",
     "peerjs": "^1.3.1",
+    "query-string": "5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form-hooks": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.4",
     "react-toastify": "^6.2.0",
     "subscriptions-transport-ws": "^0.9.18",
     "typescript": "^4.0.3",
+    "use-local-storage-state": "^6.0.3",
     "use-query-params": "^1.1.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -66,7 +75,8 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "react-app-rewired": "^2.1.8"
   },
   "settings": {
     "import/resolver": {
