--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./.env
     environment:
       - PORT=4000
+      - CHOKIDAR_USEPOLLING=true
     ports:
       - 4000:4000
     volumes:
