--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
+    "clsx": "^1.1.1",
     "customize-cra": "^1.0.0",
     "final-form": "^4.20.1",
     "graphql": "^15.4.0",
@@ -32,6 +33,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form-hooks": "^2.0.2",
+    "react-helmet-async": "^1.0.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.4",
@@ -76,7 +78,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "typescript-plugin-css-modules": "^3.0.1"
   },
   "settings": {
     "import/resolver": {
