--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,8 @@
       "jsx-a11y/anchor-is-valid": "warn",
       "react/no-unescaped-entities": "warn",
       "max-len": 0,
-      "react/jsx-props-no-spreading":0
+      "react/jsx-props-no-spreading":0,
+      "jsx-a11y/media-has-caption": 0,
+      "no-param-reassign": 0
     }
 }
