--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,7 @@
       "max-len": 0,
       "react/jsx-props-no-spreading":0,
       "jsx-a11y/media-has-caption": 0,
-      "no-param-reassign": 0
+      "no-param-reassign": 0,
+      "no-shadow": 0
     }
 }
