--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.167",
     "@types/node": "^12.0.0",
+    "@types/randomcolor": "^0.5.5",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
@@ -30,6 +31,7 @@
     "node-sass": "4.14.1",
     "peerjs": "^1.3.1",
     "query-string": "5.1.1",
+    "randomcolor": "^0.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-final-form-hooks": "^2.0.2",
