--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/randomcolor": "^0.5.5",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "clsx": "^1.1.1",
     "customize-cra": "^1.0.0",
@@ -36,6 +37,7 @@
     "react-dom": "^17.0.1",
     "react-final-form-hooks": "^2.0.2",
     "react-helmet-async": "^1.0.7",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spinners": "^0.10.4",
