--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/validator": "^13.1.3",
     "clsx": "^1.1.1",
     "customize-cra": "^1.0.0",
     "final-form": "^4.20.1",
@@ -46,6 +47,7 @@
     "typescript": "^4.0.3",
     "use-local-storage-state": "^6.0.3",
     "use-query-params": "^1.1.9",
+    "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
