--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 REACT_APP_GRAPHQL_URI=http://localhost:3000/graphql
 REACT_APP_GRAPHQL_WS_URI=ws://localhost:3000/graphql
+REACT_APP_PEER_URI=localhost
+REACT_APP_PEER_SERVER_PORT=3001
+REACT_APP_PEER_SERVER_KEY=z0oMed_pEer
 REACT_APP_LOGIN_TOKEN_EXPIRY_DAY=7
 PORT=4000
