--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   zoomed_front:
-    container_name: zoomed-front
+    container_name: zoomed_front
     build: .
     env_file:
       - ./.env
